fix spacing issues

--- a/src/Pages/Character/Character.module.css
+++ b/src/Pages/Character/Character.module.css
@@ -1,13 +1,11 @@
 .characterPage{
     box-sizing: border-box;
-    margin-top: 65px;
-    height: 100%; 
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
-.characterGrid{
-    overflow: auto;
-    max-height: 90vh;
-    min-height: 30vh;
+.characterGrid{   
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -46,7 +44,6 @@
 
 .bottom{
     display: flex;
-    height: 100%;
 }
 
 .characterProfile{
